--- a/wiki/DesignOfficialSpecification.wiki
+++ b/wiki/DesignOfficialSpecification.wiki
@@ -22,7 +22,15 @@ See as [http://code.google.com/p/imperialism-remake/wiki/DesignOfficialSpecifica
 
 === Worker pool ===
 
-The worker pool (_W integer_) contains workers (employed and unemployed, skilled and unskilled), all scientists and all engineers. 
+The worker pool (_W integer_) contains workers (employed and unemployed, skilled and unskilled), all scientists and all engineers. Without cost all specialists can always be reduced to unskilled workers.
+
+We have the following types:
+  * Unskilled workers (can work in factories, need food, basic type)
+  * Skilled workers (can work in factories, need food and money, more efficient)
+  * Scientists (can work in college or university, explore new technology)
+  * Engineers (can improve the country, your own, also minor nations)
+
+=== Natural resources ===
 
 = Military =
 
