Edited wiki page DeveloperOverview through web user interface.

--- a/wiki/DeveloperOverview.wiki
+++ b/wiki/DeveloperOverview.wiki
@@ -5,10 +5,7 @@
 
   * [RoadMap Roadmap]
   * [FeatureMap Feature map]
-
-=GUI Design=
-
-  * [DesignGUIStartScreen Start Screen]
+  * [CodingOfficialSpecification Official specification]
 
 =Guidelines=
 
