Edited wiki page CodingOfficialSpecification through web user interface.

--- a/wiki/CodingOfficialSpecification.wiki
+++ b/wiki/CodingOfficialSpecification.wiki
@@ -1,5 +1,5 @@
 #summary Main document describing the code specification.
-#labels Phase-Implementation
+#labels Phase-Implementation,Featured
 
 = Load/Save =
 
