--- a/wiki/DesignOfficialSpecification.wiki
+++ b/wiki/DesignOfficialSpecification.wiki
@@ -1,5 +1,5 @@
 #summary Main document describing the most detailed specification of our Imperialism remake.
-#labels Phase-Design
+#labels Phase-Design,Featured
 See as [http://code.google.com/p/imperialism-remake/wiki/DesignOfficialSpecification?show=content html].
 
 *Imperialism remake - Official Specification v1 (2012 January)*
