--- a/wiki/NewsArchive.wiki
+++ b/wiki/NewsArchive.wiki
@@ -1,3 +1,9 @@
 #summary Archive of news messages from the front page.
 
+==2012==
+
+*January 17th 2012:* Website and Forum added. Game design has advanced.
+
 ==2011==
+
+*November 16th 2011:* Project created. Started the planning phase.
